fix: navbar not wording on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ button {
 
 .header {
      width: 100%;
-     height: 116px;
+     /* height: 116px; */
 }
 
 .header_top {
@@ -332,7 +332,7 @@ ul.social_icon_top li a:hover {
 
 .header_bottom {
      background-color: #fff;
-     height: 100px;
+     /* height: 100px; */
      padding: 25px 25px;
 }
 
